<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:background="@drawable/topbarhacktober"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding"
                android:text="@string/website_link"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_subheader"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="@dimen/card_margin"
            app:cardElevation="@dimen/card_elevation">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/card_header"
                    android:layout_margin="@dimen/card_header_margin"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_height"
                    android:background="@color/view_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/about_hacktoberfest"/>

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/sign_up"
                    android:layout_gravity="end"
                    android:paddingRight="@dimen/card_link_padding_right"
                    android:paddingBottom="@dimen/card_header_margin"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_margin="@dimen/card_margin"
            app:cardElevation="@dimen/card_elevation">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_header"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/card_header"
                    android:layout_margin="@dimen/card_header_margin"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_height"
                    android:background="@color/view_color"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/app_hacktoberfest"/>

                <TextView
                    android:id="@+id/tv_view_github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/view_github"
                    android:layout_gravity="end"
                    android:paddingRight="@dimen/padding"
                    android:paddingBottom="@dimen/card_header_margin"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/margin"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/note"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view"/>

    </LinearLayout>

</ScrollView>